<resources>
    <string name="pic">Album</string>
    <string name="photo">Take Photo</string>
    <string name="video">Record Video</string>
    <string name="file">File</string>
    <string name="release_end">Release to Send</string>
    <string name="hold_say">Hold to Talk</string>
    <string name="voice_input_edit_text_hint">Send a message or hold to talk...</string>
    <string name="voice_input_release_send_hint">Release to send</string>
    <string name="voice_input_release_transcribe_hint">Release to transcribe</string>
    <string name="voice_input_release_cancel_hint">Release to cancel</string>
    <string name="voice_input_cancel">Cancel</string>
    <string name="voice_input_transcribe_to_text">To text</string>
    <string name="voice_input_send_original_voice">Send voice</string>
    <string name="voice_input_transcription_empty">No text recognized</string>
    <string name="voice_input_transcribing">Converting voice to text...</string>
    <string name="voice_input_convert_failed">Voice to text failed</string>
    <string name="voice_input_auto_stop_countdown">%1$ds until recording stops</string>
    <string name="voice_input_audio_too_short">The voice recording is too short</string>
    <string name="voice_input_audio_time_limit_reached">The voice recording time limit has been reached</string>
    <string name="copy_action">Copy</string>
    <string name="translate_action">Translate</string>
    <string name="delete_action">Delete</string>
    <string name="revoke_action">Recall</string>
    <string name="resend_action">Resend</string>
    <string name="hide_action">Hide</string>
    <string name="chat_speaker_mode_on_action">Turn on Speaker</string>
    <string name="chat_speaker_mode_off_action">Play on Ear</string>
    <string name="chat_speaker_mode_on_tip">Speaker Mode On</string>
    <string name="chat_speaker_mode_off_tip">Speaker Mode off</string>
    <string name="copy_success_tip">Copy Success</string>
    <string name="chat_message_detail">Message details</string>
    <string name="titlebar_back">Back</string>
    <string name="forward_tip">please select message!</string>
    <string name="forward_mode_onebyone">One-by-one forward</string>
    <string name="forward_mode_merge">Combine and forward</string>
    <string name="forward_button">Forward</string>
    <string name="reply_button">Reply</string>
    <string name="quote_button">Quote</string>
    <string name="info_button">Info</string>
    <string name="delete_button">Delete</string>
    <string name="chat_delete_msg_tip">Delete now</string>
    <string name="forward_chats">Group Chat History</string>
    <string name="and_text">and</string>
    <string name="forward_chats_c2c">Chat History</string>
    <string name="forward_compatible_text">Combine and Forward is not available. Upgrade to the latest version first.</string>
    <string name="forward_chat_record">Chat Record</string>
    <string name="forward_failed_tip">Unable to forward failed messages.</string>
    <string name="forward_group_note_or_poll_failed_tip">Unable to forward group-note or poll messages.</string>
    <string name="forward_oneByOne_limit_number_tip">Unable to forward the messages one by one because there are too many messages.</string>
    <string name="send_two_mins">Message sent more than 2 min ago</string>
    <string name="revoke_fail">Failed to recall</string>
    <string name="group_apply_tips">%1$d group joining request(s)</string>
    <string name="down_cancle_send">Slide up to cancel</string>
    <string name="say_time_short">Message too short</string>
    <string name="record_fail">Recording failed</string>
    <string name="up_cancle_send">Release to Cancel</string>
    <string name="send">Send</string>
    <string name="custom_msg">[Custom Messages]</string>
    <string name="custom_emoji">[Animated Sticker]</string>
    <string name="picture_extra">[Image]</string>
    <string name="video_extra">[Video]</string>
    <string name="audio_extra">[Voice]</string>
    <string name="file_extra">[File]</string>
    <string name="location_extra">[Location]</string>
    <string name="locate_origin_msg_failed_tip">Unable to locate the original message.</string>
    <string name="forward_extra">[Chat Record]</string>
    <string name="revoke_tips_you">You recalled a message.</string>
    <string name="revoke_tips">recalled a message.</string>
    <string name="revoke_tips_other">A message is recalled.</string>
    <string name="create_group">Create Group</string>
    <string name="create_community">Create Community</string>
    <string name="etc">, etc.</string>
    <string name="join_group">%s joined the group</string>
    <string name="invite_joined_group">%s invited %s to join the group</string>
    <string name="quit_group">%s left the group</string>
    <string name="kick_group_tip">%s has removed %s from the group</string>
    <string name="be_group_manager">%s was promoted to group manager</string>
    <string name="cancle_group_manager">%s was demoted from group manager</string>
    <string name="modify_group_name_is">%s changed the group name to %s</string>
    <string name="modify_notice">%s changed the group notice to %s</string>
    <string name="modify_introduction">%s changed the group introduction to %s</string>
    <string name="modify_shut_up_all">%s muted all members</string>
    <string name="modify_cancel_shut_up_all">%s unmuted all members</string>
    <string name="move_owner">%s transferred group ownership to %s</string>
    <string name="modify_group_avatar">%s changed the group avatar</string>
    <string name="banned">%s was muted for %s</string>
    <string name="cancle_banned">%s was unmuted</string>
    <string name="modify_group_add_opt">%s changed the group join setting to %s</string>
    <string name="modify_group_invite_opt">%s changed the group invitation setting to %s</string>
    <string name="group_add_opt_auto_approval">Auto Approval</string>
    <string name="group_add_opt_admin_approve">Admin Approval</string>
    <string name="group_add_opt_join_disable">Prohibited from Joining</string>
    <string name="group_add_opt_invite_disable">Prohibited from Inviting</string>
    <string name="modify_topic_name_is">%s changed the topic name to %s</string>
    <string name="modify_topic_notice">%s changed the topic notice to %s</string>
    <string name="modify_topic_introduction">%s changed the group introduction to %s</string>
    <string name="modify_topic_avatar">%s changed the group avatar</string>
    <string name="typing">Typing...</string>
    <string name="titlebar_mutiselect">Select</string>
    <string name="audio_permission_error">Need audio permission</string>
    <string name="record_occupied">record occupied</string>
    <string name="record_null">record is null</string>
    <string name="record_limit_tips">Maximum voice length reached</string>
    <string name="record_rejected_for_in_call">An audio and video call is in progress, please try again later</string>
    <string name="record_rejected_for_in_recording">The current recording is not over</string>
    <string name="play_error_tip">The voice file is damaged or does not exist</string>
    <string name="input_tip">No nickname. Enter again.</string>
    <string name="chat_camera_occupied_tip">Other functions are using the camera.</string>
    <string name="chat_mic_is_being_used_cant_record">Microphone is being used by another function, unable to record.</string>
    <string name="chat_record_audio_failed">Audio recording failed.</string>
    <string name="delivered">Delivered to</string>
    <string name="someone_unread">%d unread</string>
    <string name="someone_have_read">%d have read</string>
    <string name="un_download">Not downloaded</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading...</string>
    <string name="send_failed">Send Failed</string>
    <string name="send_failed_file_not_exists">Send failed, file not exists</string>
    <string name="sended">Sent</string>
    <string name="sending">Sending...</string>
    <string name="open_file_tips">Select an app to open the file</string>
    <string name="download_file_error">Failed to download video: </string>
    <string name="voice_play_tip">Voice file not downloaded.</string>
    <string name="record_time_tip">The recording time is too short.</string>
    <string name="tap_tips">tap for photo, hold for record</string>
    <string name="tap_capture">tap to take photo</string>
    <string name="tap_video">hold to record video</string>
    <string name="completed">completed</string>
    <string name="view_original_image">View Full Image</string>
    <string name="at_all">All</string>
    <string name="ui_at_all">[@All]</string>
    <string name="ui_at_me">[Someone @ me]</string>
    <string name="ui_at_all_me">[@All][Someone @ me]</string>
    <string name="drafts">[Drafts]</string>
    <string name="group_apply_click_handle">Tap to Process</string>
    <string name="no_support_msg">Unsupported custom messages</string>
    <string name="start_group_call">Start Group Call</string>
    <string name="start_call">Start Call</string>
    <string name="cancle_group_call">Cancel Group Call</string>
    <string name="cancle_call">Cancel Call</string>
    <string name="other_line_busy">Line busy</string>
    <string name="reject_group_calls">Decline Group Call</string>
    <string name="no_response_call">No answer</string>
    <string name="accept_call">Answered</string>
    <string name="line_busy">Line busy</string>
    <string name="reject_call">reject</string>
    <string name="invalid_command">invalid command</string>
    <string name="stop_group_call">End Group Call</string>
    <string name="stop_call_tip">Duration:</string>
    <string name="reject_calls">Decline Call</string>
    <string name="chat_calling_switch_to_audio">Switch to voice call</string>
    <string name="chat_calling_switch_to_audio_accept">Confirm video to voice</string>
    <string name="chat_calling_unknown_invitation">Unknown invitation</string>
    <string name="test_custom_message">View Details>></string>
    <string name="test_custom_action">Custom</string>
    <string name="welcome_tip">Welcome to Tencent Cloud Chat!</string>
    <string name="resend_tips">Are you sure you want to resend?</string>
    <string name="delete_tips">Are you sure you want to delete this message?</string>
    <string name="reedit_msg">Re-edit</string>
    <string name="save_success">Saved successfully</string>
    <string name="save_failed">Saved failed</string>
    <string name="saving_tips">Saving</string>
    <string name="back_to_lastmessage">Go to Latest Message</string>
    <string name="group_notice">Group Notice</string>
    <string name="group_notice_empty_tip">No group notice</string>
    <string name="group_members">Group Members</string>
    <string name="group_type">Group Type</string>
    <string name="join_group_type">Group Joining Method</string>
    <string name="invite_group_type">Group Inviting Method</string>
    <string name="in_group_nick_name">My Alias in Group</string>
    <string name="dissolve">Disband Group</string>
    <string name="clear_message">Clear Chat History</string>
    <string name="profile_msgrev_opt">Mute Notifications</string>
    <string name="profile_chat_background">Chat background</string>
    <string name="chat_to_top">Pin</string>
    <string name="fold_this_group_chat">Fold this group chat</string>
    <string name="contact_account_tag">ID : </string>
    <string name="contact_signature_tag">Status : </string>
    <string name="profile_remark">Alias</string>
    <string name="profile_black">Block</string>
    <string name="profile_delete_friend">Delete Contact</string>
    <string name="profile_clear_message">Clear Chat History</string>
    <string name="group_account_tag">ID : </string>
    <string name="chat_add_friend">Add Contact</string>
</resources>