<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/core_bg_color"
    android:orientation="vertical">

    <com.tencent.qcloud.tuikit.timcommon.component.TitleBarLayout
        android:id="@+id/group_info_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_title_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/group_detail_area"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:background="#FFFFFF">

                <com.tencent.qcloud.tuikit.timcommon.component.gatherimage.ShadeImageView
                    android:id="@+id/group_icon"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="11.5dp"
                    android:layout_marginEnd="15.36dp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/group_icon"
                    android:layout_toEndOf="@id/group_icon"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textSize="17sp"
                    tools:text="group" />

                <TextView
                    android:id="@+id/group_account_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/group_name"
                    android:layout_alignStart="@id/group_name"
                    android:layout_marginTop="7.64dp"
                    android:gravity="center_vertical"
                    android:text="@string/group_account_tag"
                    android:textSize="12.5sp" />

                <TextView
                    android:id="@+id/group_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/group_name"
                    android:layout_alignTop="@+id/group_account_tag"
                    android:layout_toEndOf="@id/group_account_tag"
                    android:gravity="center_vertical"
                    android:textIsSelectable="true"
                    android:textSize="12.5sp"
                    tools:text="99618" />


                <ImageView
                    android:id="@+id/group_detail_arrow"
                    android:layout_width="11.52dp"
                    android:layout_height="11.52dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/common_arrow_right" />
            </RelativeLayout>


            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/group_member_bar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                app:name="@string/group_members" />

            <FrameLayout
                android:id="@+id/group_member_grid_container"
                android:orientation="vertical"
                android:layout_marginTop="0.5dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="19.2dp"
                android:paddingTop="11.5dp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <LinearLayout
                android:id="@+id/group_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="15.36dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11.52dp"
                    android:lineHeight="23.04sp"
                    android:text="@string/group_notice"
                    android:textAlignment="viewStart"
                    android:textColor="#444444"
                    android:textSize="15.36sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15.36dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/group_notice_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:lineHeight="17.28sp"
                        android:singleLine="true"
                        android:text="@string/group_notice_empty_tip"
                        android:textAlignment="viewStart"
                        android:textColor="#888888"
                        android:textSize="11.52sp" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:background="@drawable/common_arrow_right" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/extension_settings_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/group_type_bar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:isTop="true"
                app:name="@string/group_type" />

            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/join_type_bar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:isTop="true"
                app:name="@string/join_group_type" />

            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/invite_type_bar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:isTop="true"
                app:name="@string/invite_group_type" />

            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/self_nickname_bar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                app:name="@string/in_group_nick_name" />

            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/msg_rev_option"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                app:isSwitch="true"
                app:name="@string/profile_msgrev_opt" />

            <RelativeLayout
                android:id="@+id/layout_fold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <View
                    android:id="@+id/fold_top_line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line" />

                <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                    android:id="@+id/fold_group_chat"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_below="@id/fold_top_line"
                    android:layout_marginStart="20dp"
                    app:isSwitch="true"
                    app:name="@string/fold_this_group_chat" />

                <View
                    android:id="@+id/left_line"
                    android:layout_width="10dp"
                    android:layout_height="2px"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:background="#AAAAAA" />

                <View
                    android:id="@+id/fold_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@id/fold_group_chat"
                    android:background="@color/line" />
            </RelativeLayout>

            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/chat_to_top_switch"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:isSwitch="true"
                app:name="@string/chat_to_top" />

            <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
                android:id="@+id/chat_background"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:canNav="true"
                app:name="@string/profile_chat_background"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/group_clear_msg_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/clear_message"
                android:textColor="?attr/core_error_tip_color"
                android:textSize="16.32sp"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/group_profile_bottom_extension_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" />

            <TextView
                android:id="@+id/group_dissolve_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.6dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/dissolve"
                android:textColor="?attr/core_error_tip_color"
                android:textSize="16.32sp"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/warning_extension_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="visible" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>

